--- a/website/sass/style.scss
+++ b/website/sass/style.scss
@@ -145,6 +145,7 @@ li {
 }
 
 .left {
+   color: $lightGray;
    background: $darkGray;
 }
 
@@ -199,31 +200,31 @@ li {
 
    @media (max-height: 1600px) {
       .wrapper {
-         height: 1600px;
+         min-height: 1600px;
       }
    }
 
    @media (max-height: 1200px) {
       .wrapper {
-         height: 1200px;
+         min-height: 1200px;
       }
    }
 
    @media (max-height: 1000px) {
       .wrapper {
-         height: 1000px;
+         min-height: 1000px;
       }
    }
 
    @media (max-height: 800px) {
       .wrapper {
-         height: 800px;
+         min-height: 800px;
       }
    }
 
    @media (max-height: 600px) {
       .wrapper {
-         max-height: 600px;
+         min-max-height: 600px;
       }
    }
 
