--- a/website/sass/style.scss
+++ b/website/sass/style.scss
@@ -75,7 +75,7 @@ a {
 
    &:hover, &:active {
       color: $darkBlue;
-      border-bottom: 1px solid $lightGray;
+      border-bottom: 2px solid $lightGray;
       @include vendorize(transition, all 0.444s ease);
    }
    &:visited {
@@ -181,7 +181,7 @@ nav {
 
 .logoWrapper {
    background: $lightGray;
-   border-right: 1px solid $darkBlue;
+   border-right: px solid $darkBlue;
 
    h1 {
       font-family: $jockey;
