--- a/website/sass/style.scss
+++ b/website/sass/style.scss
@@ -185,7 +185,7 @@ nav {
 
 .logoWrapper {
    background: $lightGray;
-   border-right: px solid $darkBlue;
+   border-right: 1px solid $darkBlue;
 
    h1 {
       font-family: $jockey;
