Add link to modular scale in scss.

--- a/sample/templates/clean/sass/_modular_scale.scss
+++ b/sample/templates/clean/sass/_modular_scale.scss
@@ -47,6 +47,8 @@ $size-15: 0.055;
 // 20px @ 1:1.5
 // 28px @ 1:1.5
 //
+// http://modularscale.com/scale/?px1=20&px2=28&ra1=1.5&ra2=0
+//
 // Pixels      Ems     Ems @ 16    % of 13
 // 1,153.305   57.665  72.082      8,871.577
 // 1,076.417   53.821  67.276      8,280.131
