--- a/sample/templates/clean/sass/style.scss
+++ b/sample/templates/clean/sass/style.scss
@@ -6,18 +6,16 @@
  * Modular scale: http://modularscale.com/scale/?px1=20&px2=28&ra1=1.5&ra2=0
  */
 
-// Google WebFonts: PT Serif, PT Sans, and PT Mono
-@import url(http://fonts.googleapis.com/css?family=PT+Sans:400,700,400italic,700italic|PT+Mono|PT+Serif:400,700,400italic,700italic);
-
 // Local includes
 @import "reset";
 @import "colors";
-@import "modular_scale";
+@import "typography";
+
 
 html {
    font-size: 125%;
    line-height: 1.4;
-   font-family: 'PT Sans', sans-serif;
+   font-family: $sans;
 }
 
 body {
@@ -26,13 +24,13 @@ body {
 }
 
 h1, h2, h3, h4 {
-   font-family: 'PT Serif', serif;
+   font-family: $serif;
 }
 
 h5, h6 {
-   font-family: 'PT Sans', sans-serif;
+   font-family: $sans;
 }
 
 code, pre {
-   font-family: 'PT Mono', monospace;
+   font-family: $mono;
 }
