Set height of h1 heading elements explicitly.

--- a/website/sass/_typography.scss
+++ b/website/sass/_typography.scss
@@ -24,6 +24,8 @@ $a: 0.936;
 $b: 0.667;
 $c: 0.624;
 $d: 0.444;
+$e: 0.416;
+$f: 0.296;
 
 .ginormous {font-size: 10.667rem;}
 .huge {font-size: 7.594rem;}
