--- a/website/sass/style.scss
+++ b/website/sass/style.scss
@@ -274,6 +274,7 @@ ul {
 
    #logoWrapper {
       h1 {
+         height: $theta + rem;
          text-align: center;
          font-size: $zeta + rem;
       }
@@ -354,13 +355,18 @@ ul {
             margin-top: $c + rem;
          }
 
+         #logoWrapper, #descriptionWrapper {
+            height: $theta + rem;
+         }
+
          #logoWrapper {
-            //height: $eta + rem;
             margin-top: 0;
 
             h1 {
-               //height: $zeta + rem;
-               //font-size: $epsilon + rem;
+               text-align: center;
+               height: $theta + rem;
+               font-size: $zeta + rem;
+               padding: 0;
             }
          }
 
@@ -369,7 +375,11 @@ ul {
 
             h2 {
                text-align: center;
-               padding: 0;
+               font-size: $alpha + rem;
+               padding: {
+                  top: $f + rem;
+                  left: 0;
+               }
             }
          }
 
@@ -407,5 +417,12 @@ ul {
       .optionalBreak {
          display: none;
       }
+   }
+}
+
+@supports (hyphens: auto) {
+   p {
+      text-align: justify;
+      @include vendorize(hyphens, auto);
    }
 }
