--- a/website/sass/_typography_and_color.scss
+++ b/website/sass/_typography_and_color.scss
@@ -1,6 +1,23 @@
+// Colors
+$lightBlue: #3498db;
+$darkBlue: #186189;
+$darkGray: #444444;
+$lightGray: #F8F8F8;
+
+
 // Typefaces
 $jockey: 'Jockey One', monospace;
 $open: 'Open Sans', 'Century Gothic', sans-serif;
+
+
+// Hyphenation/justification
+@supports (hyphens: auto) {
+   p {
+      text-align: justify;
+      @include vendorize(hyphens, auto);
+   }
+}
+
 
 // Modular scale on perfect fifth with 18px/128px
 // http://modularscale.com/scale/?px1=18&px2=128&ra1=1.5&ra2=0
@@ -27,8 +44,13 @@ $d: 0.444;
 $e: 0.416;
 $f: 0.296;
 
+$tiny: 0.185;
+$micro: 0.123;
+
+// Classes
 .ginormous {font-size: 10.667rem;}
 .huge {font-size: 7.594rem;}
+
 .kappa {font-size: 7.111rem;}
 .iota {font-size: 5.063rem;}
 .theta {font-size: 4.741rem;}
@@ -47,6 +69,8 @@ $f: 0.296;
 .c {font-size: 0.936rem;}
 .c {font-size: 0.667rem;}
 
+.tiny {font-size: 0.185rem;}
+.micro {font-size: 0.123rem;}
 
 //    Pixels	   Ems	      Ems @ 16	   % of 13
 //    1,037.974	57.665	   64.873	   7,984.415
