Responsive tweaks for portrait views on phones and small tablets.

--- a/website/sass/_responsive.scss
+++ b/website/sass/_responsive.scss
@@ -24,7 +24,6 @@
          }
 
          #logoWrapper {
-
             h1 {
                text-align: center;
                height: $theta + rem;
@@ -71,6 +70,14 @@
 
             p {
                width: 100%;
+            }
+         }
+      }
+
+      @media (max-height: 400px) {
+         .index {
+            #logoWrapper {
+               margin-top: $delta + rem;
             }
          }
       }
