--- a/website/sass/style.scss
+++ b/website/sass/style.scss
@@ -129,6 +129,10 @@ ul {
    margin-bottom: -99999px;
    padding-bottom: 99999px;
    overflow: hidden;
+
+   &.right {
+      border-left: 1px solid;
+   }
 }
 
 .left {
