--- a/sample/templates/clean/base.html
+++ b/sample/templates/clean/base.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang='en'>
 <head>
+   {% block head %}
    <title>{{ site.name }}</title>
    <meta charset='UTF-8' />
 
    <link rel='stylesheet' href='css/style.css' />
+   {% endblock %}
 </head>
 <body>
-   {{ content }}
+   <header><h1>{{ site.name }}</h1></header>
+   <article>
+      <header>
+         <h1>{{ page.meta.title }}</h1>
+      </header>
+      {{ page.content }}
+   </article>
 </body>
 </html>
