Tons of changes all aiming at actually building the blog (which, at the most basic level, now works). See the full changelog below. - Created a Builder class for building the site - Migrated almost all of the functions in content.py into the Builder class (excluding those devoted to *writing* the site) - Tweaked the base template to support looping over a set of posts instead of just one - Always pass the template a list of posts, even if the list is only of length 1 - Build the sets of pages correctly for the blog archive - Flesh out the paginate function with a slice and list comprehension combo. - Add a template category for the blog option in the site configuration - Get the configuration in config.py synchronized with all the version used in the sample site

--- a/sample/templates/clean/base.html
+++ b/sample/templates/clean/base.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang='en'>
 <head>
-   {% block head %}
-   <title>{% if page.meta.title %}{{ page.meta.title[0] }} &mdash; {% endif %}{{ site.name }}</title>
+{% block head %}
+   <title>{% if page and page.meta.title %}{{ page.meta.title[0] }} &mdash; {% endif %}{{ site.name }}</title>
    <meta charset='UTF-8' />
 
    <link rel='stylesheet' href='css/style.css' />
-   {% endblock %}
+{% endblock %}
 </head>
 <body>
-   {% block site_header %}
+{% block site_header %}
    <header><h1>{{ site.name }}</h1></header>
-   {% endblock %}
-   {% block site_content %}
+{% endblock %}
+{% block site_content %}
+   {% for page in pages %}
    <article>
       {% if page.meta.title or page.meta.subtitle %}
       <header>
@@ -26,6 +27,7 @@
       Whoops! Looks like the content for this page went missing somehow.
       {% endif %}
    </article>
-   {% endblock %}
+   {% endfor %}
+{% endblock %}
 </body>
 </html>
